<?xml version="1.0"?> // xml 버전
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> // xml 스키마
<package format="3"> // 패키지 포맷
  <name>tutorial_interfaces</name> // 패키지 이름
  <version>0.0.0</version> // 패키지 버전
  <description>ros2 tutorial interface</description> // 패키지 설명
  <maintainer email="sis@todo.todo">sis</maintainer> // 패키지 유지보수자
  <license>Apache License 2.0</license> // 패키지 라이센스
  <buildtool_depend>ament_cmake</buildtool_depend> // 빌드툴 의존성
  <buildtool_depend>rosidl_default_generators</buildtool_depend> // 빌드툴 의존성

  <exec_depend>builtin_interfaces</exec_depend> // 실행 의존성
  <exec_depend>rosidl_default_runtime</exec_depend> // 실행 의존성

  <member_of_group>rosidl_interface_packages</member_of_group> // 그룹 멤버

  <export>
    <build_type>ament_cmake</build_type> // 빌드 타입
  </export>
</package>
